# SoftRoboDog_with_Shoulder

./: .gitignore  joy2twist.yaml
src/cmd_vel_to_joystick/cmd_vel_to_joystick/: cmd_vel_to_joystick.py
src/joystick_publisher/joystick_publisher/: joystick_publisher.py
src/motor_commands/motor_commands/: motor_commands.py  transmit_command.py
src/motor_serial/motor_serial/: motor_serial.py
src/my_parameters/: CMakeLists.txt  package.xml
src/my_parameters/msg/: GaitClock.msg  JoystickParameters.msg  MotorParameters.msg  ShoulderCommand.msg  Stm32Data.msg
src/shoulder_controller/: package.xml  setup.py
src/shoulder_controller/shoulder_controller/: shoulder_gait_node.py
src/soft_robot_bringub/launch/: control_motion_joystick.launch.py
