<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_parameters</name>
  <version>0.0.0</version>
  <description>Custom message definitions for motor and joystick parameters</description>
  <maintainer email="mernaiskander35@gmail.com">pi2</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message generation -->
  <exec_depend>rosidl_default_generators</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- this line have been changed -->
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Other messages you use -->
  <depend>geometry_msgs</depend>

  <!-- Tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
